Parser.js
//@ts-check

const {Utils} = require("./Utils.js");

const LOG = false;

/**
 * @typedef {Object} ASTNodeOptions
 * @prop {Token[]} tokens
 * @prop {any} [any]
 */

class ASTNode {
	/**
	 * Creates an instance of ASTNode.
	 * @param {ASTNodeOptions} options
	 * @memberof ASTNode
	 */
	constructor(options) {
		const {
			tokens = []
		} = options;

		/** @type {Token[]} */
		this.tokens = tokens;
	}
}

class Expression extends ASTNode {
	/**
	 * Creates an instance of Expression.
	 * @param {ASTNodeOptions} options
	 * @memberof Expression
	 */
	constructor(options) {
		const {
			any
		} = options || {};

		super(options);
	}
}

class Identifier extends Expression {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of Identifier.
	 * @param {{name: string} & ASTNodeOptions} options
	 * @memberof Identifier
	 */
	constructor(options) {
		const {
			name = ""
		} = options;

		super(options);

		/** @type {string} */
		this.name = name;
	}

	toString() {
		return this.name;
	}
}

class UnaryExpression extends Expression {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of UnaryExpression.
	 * @param {{operator: string, argument: (Expression | Literal)} & ASTNodeOptions} options
	 * @memberof UnaryExpression
	 */
	constructor(options) {
		const {
			operator,
			argument
		} = options;

		super(options);

		/** @type {string} */
		this.operator = operator;

		/** @type {Expression | Literal} */
		this.argument = argument;
	}

	toString() {
		return `(${this.operator} ${this.argument})`;
	}
}

class BinaryExpression extends Expression {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of BinaryExpression.
	 * @param {{operator: string, left: (Expression | Literal), right: (Expression | Literal)} & ASTNodeOptions} options
	 * @memberof BinaryExpression
	 */
	constructor(options) {
		const {
			operator,
			left,
			right
		} = options;

		super(options);

		/** @type {string} */
		this.operator = operator;

		/** @type {Expression | Literal} */
		this.left = left;

		/** @type {Expression | Literal} */
		this.right = right;
	}

	toString() {
		return `(${this.left} ${this.operator} ${this.right})`;
	}
}

class AssignmentExpression extends Expression {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of AssignmentExpression.
	 * @param {{left: (Identifier | MemberExpression), right: (Expression | Literal)} & ASTNodeOptions} options
	 * @memberof AssignmentExpression
	 */
	constructor(options) {
		const {
			left,
			right
		} = options;

		super(options);

		/** @type {Identifier | MemberExpression} */
		this.left = left;

		/** @type {Expression | Literal} */
		this.right = right;
	}

	toString() {
		return `(${this.left} = ${this.right})`;
	}
}

class SequenceExpression extends Expression {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of SequenceExpression.
	 * @param {{expressions: Array<Expression | Literal>} & ASTNodeOptions} options
	 * @memberof SequenceExpression
	 */
	constructor(options) {
		const {
			expressions = []
		} = options;

		super(options);

		/** @type {Array<Expression | Literal>} */
		this.expressions = expressions;
	}

	toString() {
		return `(${this.expressions.join(", ")})`;
	}
}

class Literal extends Expression {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of Literal.
	 * @param {{value: (string | undefined), type?: (number | undefined)} & ASTNodeOptions} options
	 * @memberof Literal
	 */
	constructor(options) {
		const {
			value = undefined,
			type = TOKEN_TYPE.IDENTIFIER
		} = options;

		super(options);

		/** @type {number | string | boolean | undefined} */
		this.value = Literal.parseValue(value, type);

		/** @type {number} */
		this.type = type;

		/** @type {string | undefined} */
		this.raw = value;
	}

	toString() {
		return Utils.asString(this.value);
	}

	/**
	 * @static
	 * @param {any} value
	 * @param {number} [type=TOKEN_TYPE.IDENTIFIER]
	 * @return {any} 
	 * @memberof Literal
	 */
	static parseValue(value, type = TOKEN_TYPE.IDENTIFIER) {
		if(type === TOKEN_TYPE.STRING) return String(value);
		if(type === TOKEN_TYPE.NUMBER) {
			if(isNaN(value)) return undefined;
			else return Number(value);
		}

		//Try to resolve without the specified type
		if(value === undefined) return undefined;
		if(typeof value === "string") return String(value);
		if(!isNaN(value)) return Number(value);
		return "<not resolved>";
	}
}

class Statement extends ASTNode {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of Statement.
	 * @param {{} & ASTNodeOptions} options
	 * @memberof Statement
	 */
	constructor(options) {
		const {
			any
		} = options || {};

		super(options);
	}
}

class VariableDeclaration extends Statement {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of VariableDeclaration.
	 * @param {{declarations: VariableDeclarator[]} & ASTNodeOptions} options
	 * @memberof VariableDeclaration
	 */
	constructor(options) {
		const {
			declarations = []
		} = options;

		super(options);

		/** @type {VariableDeclarator[]} */
		this.declarations = declarations;
	}

	toString() {
		return `let ${this.declarations.map(e => e.toString()).join(", ")};`;
	}
}

class EmptyStatement extends Statement {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of EmptyStatement.
	 * @param {{} & ASTNodeOptions} options
	 * @memberof EmptyStatement
	 */
	constructor(options) {
		super(options);
	}

	toString() {
		return `;`;
	}
}

class ExpressionStatement extends Statement {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of ExpressionStatement.
	 * @param {{expression: Expression} & ASTNodeOptions} options
	 * @memberof ExpressionStatement
	 */
	constructor(options) {
		const {
			expression
		} = options;

		super(options);

		/** @type {Expression} */
		this.expression = expression;
	}

	toString() {
		return `${this.expression.toString()};`;
	}
}

class ReturnStatement extends Statement {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of ReturnStatement.
	 * @param {{argument: Expression} & ASTNodeOptions} options
	 * @memberof ReturnStatement
	 */
	constructor(options) {
		const {
			argument
		} = options;

		super(options);

		/** @type {Expression} */
		this.argument = argument;
	}

	toString() {
		return `return ${this.argument.toString()};`;
	}
}

class VariableDeclarator extends Statement {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of VariableDeclarator.
	 * @param {{id: Identifier, init: (Expression | Literal)} & ASTNodeOptions} options
	 * @memberof VariableDeclarator
	 */
	constructor(options) {
		const {
			id,
			init
		} = options;

		super(options);

		/** @type {Identifier} */
		this.id = id;

		/** @type {Expression | Literal} */
		this.init = init;
	}

	toString() {
		return `${this.id.name} = ${this.init.toString()}`;
	}
}

class BlockStatement extends Statement {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of BlockStatement.
	 * @param {{body?: ASTNode[]} & ASTNodeOptions} options
	 * @memberof BlockStatement
	 */
	constructor(options) {
		const {
			body = []
		} = options;

		super(options);

		/** @type {ASTNode[]} */
		this.body = body;
	}

	toString() {
		return `{\n${this.body.map(node => "  " + node.toString().split("\n").join("\n  ")).join("\n")}\n}`;
	}
}

class FunctionExpression extends Expression {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of FunctionExpression.
	 * @param {{identifier?: (Identifier | null), params?: Array<(Identifier | AssignmentPattern)>, body?: BlockStatement} & ASTNodeOptions} options
	 * @memberof FunctionExpression
	 */
	constructor(options) {
		const {
			identifier = null,
			params = [],
			body = new BlockStatement({})
		} = options;

		super(options);

		/** @type {Identifier | null} */
		this.identifier = identifier;

		/** @type {(Identifier | AssignmentPattern)[]} */
		this.params = params;

		/** @type {BlockStatement} */
		this.body = body;
	}

	toString() {
		return `function${this.identifier ? ` ${this.identifier.name}` : ""}(${this.params.map(e => e.toString()).join(", ")}) ${this.body.toString()}`;
	}
}

class CallExpression extends Expression {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of CallExpression.
	 * @param {{callee: Expression, args: Array<Expression | Literal>} & ASTNodeOptions} options
	 * @memberof CallExpression
	 */
	constructor(options) {
		const {
			callee,
			args = []
		} = options;

		super(options);

		/** @type {Expression} */
		this.callee = callee;

		/** @type {Array<Expression | Literal>} */
		this.args = args;
	}

	toString() {
		return `(${this.callee.toString()})(${this.args.map(e => e.toString()).join(", ")})`;
	}
}

class Property {
	/**
	 * Creates an instance of Property.
	 * @param {{key: Identifier, value: (Expression | Literal)}} options
	 * @memberof Property
	 */
	constructor(options) {
		const {
			key,
			value
		} = options;

		/** @type {Identifier} */
		this.key = key;

		/** @type {Expression | Literal} */
		this.value = value;
	}

	toString() {
		return `"${this.key.toString()}": ${this.value}`;
	}
}

class ClassExpression extends Expression {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of ClassExpression.
	 * @param {{identifier?: (Identifier | null), parent?: (Expression | null), properties?: Property[]} & ASTNodeOptions} options
	 * @memberof ClassExpression
	 */
	constructor(options) {
		const {
			identifier = null,
			parent = null,
			properties = []
		} = options;

		super(options);

		/** @type {Identifier | null} */
		this.identifier = identifier;

		/** @type {Expression | null} */
		this.parent = parent;

		/** @type {Property[]} */
		this.properties = properties;
	}

	toString() {
		return `class ${this.identifier ? this.identifier.name : "<anonymous>"}${this.parent ? ` extends (${this.parent.toString()})` : ""} {\n${this.properties.map(e => "  " + e.toString().split("\n").join("\n  ")).join("\n")}\n}`;
	}
}

class MemberExpression extends Expression {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of MemberExpression.
	 * @param {{object: Expression, property: Expression} & ASTNodeOptions} options
	 * @memberof MemberExpression
	 */
	constructor(options) {
		const {
			object,
			property
		} = options;

		super(options);

		/** @type {Expression} */
		this.object = object;

		/** @type {Expression} */
		this.property = property;
	}

	toString() {
		return `${this.object.toString()}[${this.property.toString()}]`;
	}
}

class NewExpression extends Expression {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of NewExpression.
	 * @param {{callee: Expression, args: Expression[]} & ASTNodeOptions} options
	 * @memberof NewExpression
	 */
	constructor(options) {
		const {
			callee,
			args = []
		} = options;

		super(options);

		/** @type {Expression} */
		this.callee = callee;

		/** @type {Expression[]} */
		this.arguments = args;
	}

	toString() {
		return `new (${this.callee.toString()})(${this.arguments.map(e => e.toString()).join(", ")})`;
	}
}

class ThisExpression extends Expression {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of ThisExpression.
	 * @param {{} & ASTNodeOptions} options
	 * @memberof ThisExpression
	 */
	constructor(options) {
		super(options);
	}

	toString() {
		return "this";
	}
}

class ArgumentsExpression extends Expression {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of ArgumentsExpression.
	 * @param {{} & ASTNodeOptions} options
	 * @memberof ArgumentsExpression
	 */
	constructor(options) {
		super(options);
	}

	toString() {
		return "arguments";
	}
}

class AssignmentPattern extends Expression {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of AssignmentPattern.
	 * @param {{left: Identifier, right: Expression} & ASTNodeOptions} options
	 * @memberof AssignmentPattern
	 */
	constructor(options) {
		const {
			left,
			right
		} = options;

		super(options);

		/** @type {Identifier} */
		this.left = left;

		/** @type {Expression} */
		this.right = right;
	}

	toString() {
		return `${this.left.toString()} = ${this.right.toString()}`;
	}
}

class IfStatement extends Statement {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of IfStatement.
	 * @param {{test: Expression, consequent: Statement, alternate?: (Statement | null)} & ASTNodeOptions} options
	 * @memberof IfStatement
	 */
	constructor(options) {
		const {
			test,
			consequent,
			alternate = null
		} = options;

		super(options);

		/** @type {Expression} */
		this.test = test;

		/** @type {Statement} */
		this.consequent = consequent;

		/** @type {Statement | null} */
		this.alternate = alternate;
	}

	toString() {
		return `if(${this.test.toString()}) ${this.consequent.toString()}${this.alternate ? ` else ${this.alternate.toString()}` : ""}`;
	}
}

class WhileStatement extends Statement {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of WhileStatement.
	 * @param {{test: Expression, body: Statement} & ASTNodeOptions} options
	 * @memberof WhileStatement
	 */
	constructor(options) {
		const {
			test,
			body
		} = options;

		super(options);

		/** @type {Expression} */
		this.test = test;

		/** @type {Statement} */
		this.body = body;
	}

	toString() {
		return `while(${this.test.toString()}) ${this.body.toString()}`;
	}
}

class ForInStatement extends Statement {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of ForInStatement.
	 * @param {{left: Identifier[], right: Expression, body: Statement} & ASTNodeOptions} options
	 * @memberof ForInStatement
	 */
	constructor(options) {
		const {
			left,
			right,
			body
		} = options;

		super(options);

		/** @type {Identifier[]} */
		this.left = left;

		/** @type {Expression} */
		this.right = right;

		/** @type {Statement} */
		this.body = body;
	}

	toString() {
		return `for(let [${this.left.map(e => e.toString()).join(", ")}] in ${this.right.toString()}) ${this.body.toString()}`;
	}
}

class ImportExpression extends Expression {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of ImportExpression.
	 * @param {{module: Expression} & ASTNodeOptions} options
	 * @memberof ImportExpression
	 */
	constructor(options) {
		const {
			module
		} = options;

		super(options);

		/** @type {Expression} */
		this.module = module;
	}

	toString() {
		return `import (${this.module.toString()})`;
	}
}

class ExportExpression extends Expression {
	// eslint-disable-next-line valid-jsdoc
	/**
	 * Creates an instance of ExportExpression.
	 * @param {{export: Expression, name: Expression} & ASTNodeOptions} options
	 * @memberof ExportExpression
	 */
	constructor(options) {
		const {
			export: _export,
			name
		} = options;

		super(options);

		/** @type {Expression} */
		this.export = _export;

		/** @type {Expression} */
		this.name = name;
	}

	toString() {
		return `export (${this.export.toString()}) as (${this.name.toString()})`;
	}
}

class Parser {
	constructor(options = {}) {
		const {tokens} = options;

		/** @type {Token[]} */
		this.tokens = tokens;

		/** @type {number} */
		this.index = -1;
	}

	/**
	 * @return {boolean} 
	 * @memberof Parser
	 */
	isAtEnd() {
		return this.index >= this.tokens.length || this.peek().type === TOKEN_TYPE.EOF;
	}

	/**
	 * @param {number} [offset=1]
	 * @return {Token} 
	 * @memberof Parser
	 */
	peek(offset = 1) {
		return this.tokens[this.index + offset];
	}

	/**
	 * @return {Token} 
	 * @memberof Parser
	 */
	advance() {
		return this.tokens[++this.index];
	}

	/**
	 * @param {number} from
	 * @return {Token[]} 
	 * @memberof Parser
	 */
	getTokenSequence(from) {
		return this.tokens.slice(from + 1, this.index + 1);
	}

	/**
	 * @return {SuccessParseResult<Statement> | FailureResult} 
	 * @memberof Parser
	 */
	statement() {
		/** @type {Statement | null} */
		let statement = null;

		if(this.peek().value === "Nech") {
			const _startPos = this.index;
			this.advance();

			const identifierResult = this.identifier();
			if(identifierResult instanceof FailureResult) return identifierResult;

			if(this.peek().value !== "je") return new FailureResult({
				error: new Error(`Expected "je", but got '${this.peek().value}'`),
				tokens: [this.peek()]
			});
			this.advance();

			const expressionResult = this.nthExpression();
			if(expressionResult instanceof FailureResult) return expressionResult;

			statement = new VariableDeclaration({
				declarations: [
					new VariableDeclarator({
						id: identifierResult.node,
						init: expressionResult.node,
						tokens: this.tokens.slice(_startPos + 1, this.index)
					})
				],
				tokens: this.getTokenSequence(_startPos)
			});
		} else if(this.peek().value === "Vráť") {
			const _startPos = this.index;
			this.advance();

			let argument = null;

			//Empty return statement
			if(this.peek().type === TOKEN_TYPE.PERIOD) {
				argument = new Literal({
					value: undefined,
					tokens: [this.peek()]
				});
			} else {
				//Look for an expression
				const expressionResult = this.nthExpression();
				if(expressionResult instanceof FailureResult) {
					return expressionResult;
					// if(this.peek().type === TOKEN_TYPE.PERIOD) {
					// 	argument = new Literal({
					// 		value: undefined
					// 	});
					// } else {
					// 	return expressionResult.comapre(new FailureResult({
					// 		error: new Error(`Expected expression or ".", but got "${this.peek().value}"`),
					// 		tokens: [this.peek()]
					// 	}));
					// }
				} else {
					argument = expressionResult.node;
				}
			}

			statement = new ReturnStatement({
				argument: argument,
				tokens: this.getTokenSequence(_startPos)
			});
		} else if(this.peek().value === "Pokiaľ") {
			const whileResult = this.while_statement();
			if(whileResult instanceof FailureResult) return whileResult;

			statement = whileResult.node;
		} else if(this.peek().value === "Pre") {
			const forResult = this.for_in_statement();
			if(forResult instanceof FailureResult) return forResult;

			statement = forResult.node;
		} else if(this.peek().type === TOKEN_TYPE.PERIOD) {
			statement = new EmptyStatement({
				tokens: [this.peek()]
			});
			// this.advance();
		} else {
			const _startPos = this.index;
			const expressionResult = this.expression2();
			if(expressionResult instanceof FailureResult) return expressionResult;

			statement = new ExpressionStatement({
				expression: expressionResult.node,
				tokens: this.getTokenSequence(_startPos)
			});
		}

		const isBlock = statement instanceof BlockStatement;

		// if(statement instanceof ExpressionStatement && !statement.expression) {
		// 	statement = new EmptyStatement();
		// }
		// LOG && console.log({isBlock, peek: this.peek(), statement}, -123333);
		if(isBlock) {
			return new SuccessParseResult({
				node: statement
			});
		}

		if(this.peek().type === TOKEN_TYPE.PERIOD) {
			this.advance();
			return new SuccessParseResult({
				node: statement
			});
		} else {
			LOG && console.log({statement}, -2222);
			return new FailureResult({
				error: new Error(`Expected "." at the end of the expression in the statement, but got "${this.peek().value}"`),
				tokens: [this.peek()],
				markers: [new Token({
					type: TOKEN_TYPE.ERROR_MARKER,
					value: "^",
					index: this.peek().index,
					line: this.peek(0).line,
					column: this.peek(0).column + this.peek(0).raw.length
				})]
			});
		}
	}

	/**
	 * @return {SuccessParseResult<Statement> | FailureResult}
	 * @memberof Parser
	 */
	statement_without_period() {
		if(this.peek().value === "Ak") {
			LOG && console.log("doing if");
			const ifStatementResult = this.if_statement();
			return ifStatementResult;
			//if(ifStatementResult instanceof FailureResult) return ifStatementResult;

			//statement = ifStatementResult.node;
		} else if(this.peek().type === TOKEN_TYPE.L_PAREN) {
			const blockResult = this.block_statement();
			if(blockResult instanceof FailureResult) return blockResult;

			if(blockResult.data.is_expression || blockResult.data.is_statement) return new SuccessParseResult({
				node: blockResult.node.body[0]
			});

			return blockResult;
		} else {
			return this.statement();
		}
	}

	// eslint-disable-next-line valid-jsdoc
	/**
	 * @return {SuccessParseResult<BlockStatement, {data?: {is_expression: boolean, is_statement: boolean}}> | FailureResult} 
	 * @memberof Parser
	 */
	block_statement() {
		let backtrackIndex = this.index;

		let data = {
			is_expression: false,
			is_statement: false
		};

		const expressionResult = this.nthExpression();
		const expressionPosition = this.index;

		const currentIndex = this.index;

		this.index = backtrackIndex;

		/** @type {SuccessParseResult<Statement> | FailureResult} */
		let statementResult = new FailureResult({
			error: new Error("Expected expression or statement"),
			tokens: [this.peek()]
		});
		let statementPosition = this.index;

		if(this.peek().type === TOKEN_TYPE.L_PAREN) {
			const currentIndex = this.index;
			// (statement_block) | (expression) => (Nech a je 1. Vráť a.) | (10 + 20)

			this.advance();

			const block = new BlockStatement({});

			while(!this.isAtEnd()) {
				statementResult = this.statement_without_period();
				statementPosition = this.index;
				if(statementResult instanceof FailureResult) {
					break;
					//return statementResult.comapre(expressionResult);
				}
				block.body.push(statementResult.node);

				if(this.peek().type === TOKEN_TYPE.R_PAREN) break;
			}

			if(statementResult instanceof SuccessParseResult) {
				this.advance();

				block.tokens = this.getTokenSequence(currentIndex);
				return new SuccessParseResult({
					node: block
				});
			}
		} else {
			// statement | expression => Vráť 1. | 10 + 20
			const currentIndex = this.index;

			statementResult = this.statement_without_period();
			statementPosition = this.index;

			if(statementResult instanceof SuccessParseResult) {
				data.is_statement = true;
				return new SuccessParseResult({
					node: new BlockStatement({
						body: [statementResult.node],
						tokens: this.getTokenSequence(currentIndex)
					}),
					data: data
				});
			}
		}

		if(expressionResult instanceof SuccessParseResult) {
			// if(statementPosition > expressionPosition) {
			// 	return statementResult;
			// }

			this.index = expressionPosition;
			data.is_expression = true;

			const tokens = this.getTokenSequence(currentIndex);

			return new SuccessParseResult({
				node: new BlockStatement({
					body: [
						new ExpressionStatement({
							expression: expressionResult.node,
							tokens: tokens
						})
					],
					tokens: tokens
				}),
				data: data
			});
		}

		LOG && console.log({expressionResult, statementResult});

		return expressionResult.comapre(statementResult);



		/*LOG && console.log("expression_or_statement, looking for statement");
		const statementResult = this.statement_without_period();
		LOG && console.log("expression_or_statement, statement resulted in", statementResult);

		let block = null;
		let data = {
			is_expression: false,
			is_statement: false
		};

		if(statementResult instanceof FailureResult) {
			const statementIndex = this.index;
			this.index = backtrackIndex;

			LOG && console.log("expression_or_statement, looking for expression");
			const expressionResult = this.expression();
			LOG && console.log("expression_or_statement, expression resulted in", statementResult);
			LOG && console.log("?????????????????", expressionResult, statementResult);
			//If the expression was successful, but the statement failed further in the program, return statement error
			if(statementIndex > this.index) return statementResult;
			if(expressionResult instanceof FailureResult) return expressionResult.comapre(statementResult);

			block = new BlockStatement({
				body: [new ExpressionStatement({
					expression: expressionResult.node
				})]
			});
			data.is_expression = true;
		} else {
			if(statementResult.node instanceof BlockStatement) block = statementResult.node;
			else {
				block = new BlockStatement({
					body: [statementResult.node]
				});
				data.is_statement = true;
			}
		}
		//TODO: do not return return statement

		return new SuccessParseResult({
			node: block,
			data: data
		});*/
	}

	if_statement() {
		const currentIndex = this.index;

		if(this.peek().value !== "Ak") return new FailureResult({
			error: new Error(`Expected "Ak", but got '${this.peek().value}'`),
			tokens: [this.peek()]
		});
		this.advance();

		const testResult = this.nthExpression();
		LOG && console.log("if_statement, testResult:", testResult);
		if(testResult instanceof FailureResult) return testResult;

		if(this.peek(1).type !== TOKEN_TYPE.COMMA || this.peek(2).value !== "tak") return new FailureResult({
			error: new Error(`Expected ", tak", but got "${this.peek(1).value} ${this.peek(2).value}"`),
			tokens: [this.peek(1), this.peek(2)]
		});
		this.advance();
		this.advance();

		LOG && console.log("if_statement, looking for consequent");
		const consequentResult = this.block_statement();
		LOG && console.log("if_statement, consequentResult:", consequentResult);
		if(consequentResult instanceof FailureResult) return consequentResult;

		let alternate = null;
		if(this.peek().type === TOKEN_TYPE.COMMA && this.peek(2).value === "inak") {
			this.advance();
			this.advance();

			//LOG && console.log("if_statement, looking for alternate");

			const alternateResult = this.block_statement();
			//LOG && console.log("if_statement, alternateResult:", alternateResult);
			if(alternateResult instanceof FailureResult) return alternateResult;

			alternate = alternateResult.node;

			if(alternateResult.data.is_statement) {
				alternate = alternate.body[0];
			}
		}

		return new SuccessParseResult({
			node: new IfStatement({
				test: testResult.node,
				consequent: consequentResult.node,
				alternate: alternate,
				tokens: this.getTokenSequence(currentIndex)
			})
		});
	}

	while_statement() {
		const currentIndex = this.index;

		if(this.peek().value !== "Pokiaľ") return new FailureResult({
			error: new Error(`Expected "Pokiaľ", but got "${this.peek().value}"`),
			tokens: [this.peek()]
		});
		this.advance();

		const testResult = this.nthExpression();
		if(testResult instanceof FailureResult) return testResult;

		if(this.peek(1).type !== TOKEN_TYPE.COMMA || this.peek(2).value !== "tak") return new FailureResult({
			error: new Error(`Expected ", tak", but got "${this.peek(1).value} ${this.peek(2).value}"`),
			tokens: [this.peek(1), this.peek(2)]
		});
		this.advance();
		this.advance();

		const bodyResult = this.block_statement();
		if(bodyResult instanceof FailureResult) return bodyResult;

		return new SuccessParseResult({
			node: new WhileStatement({
				test: testResult.node,
				body: bodyResult.node,
				tokens: this.getTokenSequence(currentIndex)
			})
		});
	}

	for_in_statement() {
		const currentIndex = this.index;

		if(this.peek(1).value !== "Pre" || this.peek(2).value !== "každé") return new FailureResult({
			error: new Error(`Expected "Pre každé", but got "${this.peek(1).value} ${this.peek(2).value}"`),
			tokens: [this.peek(1), this.peek(2)]
		});
		this.advance();
		this.advance();

		const identifiersResult = this.sequence(this.identifier);
		if(identifiersResult instanceof FailureResult) return identifiersResult;

		if(this.peek(1).value !== "v" || this.peek(2).value !== "objekte") return new FailureResult({
			error: new Error(`Expected "v objekte", but got "${this.peek(1).value} ${this.peek(2).value}"`),
			tokens: [this.peek(1), this.peek(1)]
		});
		this.advance();
		this.advance();

		const objectResult = this.nthExpression();
		if(objectResult instanceof FailureResult) return objectResult;

		const bodyResult = this.block_statement();
		if(bodyResult instanceof FailureResult) return bodyResult;

		return new SuccessParseResult({
			node: new ForInStatement({
				left: identifiersResult,
				right: objectResult.node,
				body: bodyResult.node,
				tokens: this.getTokenSequence(currentIndex)
			})
		});
	}

	/**
	 * @return {SuccessParseResult<Expression> | FailureResult} 
	 * @memberof Parser
	 */
	expression() {
		const currentIndex = this.index;

		LOG && console.log("doing expression", this.index, this.peek(0), this.peek());

		if(this.peek().value === "ku") {
			this.advance();

			//Get left expression
			const leftResult = this.nthExpression();
			if(leftResult instanceof FailureResult) return leftResult;

			//Get the operator
			const operator = this.advance().value;
			if(operator !== "pripočítaj") return new FailureResult({
				error: new Error(`Expected operator "pripočítaj", but got "${operator}"`),
				tokens: [this.peek(0)]
			});

			//Get right expression
			const rightResult = this.nthExpression();
			if(rightResult instanceof FailureResult) return rightResult;

			return new SuccessParseResult({
				node: new BinaryExpression({
					operator: "+",
					left: leftResult.node,
					right: rightResult.node,
					tokens: this.getTokenSequence(currentIndex)
				})
			});

			//this.index = currentIndex;
		}

		if(this.peek().value === "od") {
			this.advance();

			//Get left expression
			const leftResult = this.nthExpression();
			if(leftResult instanceof FailureResult) return leftResult;

			//Get the operator
			const operator = this.advance().value;
			if(operator !== "odpočítaj") return new FailureResult({
				error: new Error(`Expected operator "odpočítaj", but got "${operator}"`),
				tokens: [this.peek(0)]
			});

			//Get right expression
			const rightResult = this.nthExpression();
			if(rightResult instanceof FailureResult) return rightResult;

			return new SuccessParseResult({
				node: new BinaryExpression({
					operator: "-",
					left: leftResult.node,
					right: rightResult.node,
					tokens: this.getTokenSequence(currentIndex)
				})
			});
		}

		if(this.peek().value === "vynásob") {
			this.advance();

			//Get left expression
			const leftResult = this.nthExpression();
			if(leftResult instanceof FailureResult) return leftResult;

			//Get the operator
			const operator = this.advance().value;
			if(operator !== "s") return new FailureResult({
				error: new Error(`Expected operator "s", but got "${operator}"`),
				tokens: [this.peek(0)]
			});

			//Get right expression
			const rightResult = this.nthExpression();
			if(rightResult instanceof FailureResult) return rightResult;

			return new SuccessParseResult({
				node: new BinaryExpression({
					operator: "*",
					left: leftResult.node,
					right: rightResult.node,
					tokens: this.getTokenSequence(currentIndex)
				})
			});
		}

		if(this.peek().value === "vydeľ") {
			this.advance();

			//Get left expression
			const leftResult = this.nthExpression();
			if(leftResult instanceof FailureResult) return leftResult;

			//Get the operator
			const operator = this.advance().value;
			if(operator !== "s") return new FailureResult({
				error: new Error(`Expected operator "s", but got "${operator}"`),
				tokens: [this.peek(0)]
			});

			//Get right expression
			const rightResult = this.nthExpression();
			if(rightResult instanceof FailureResult) return rightResult;

			return new SuccessParseResult({
				node: new BinaryExpression({
					operator: "/",
					left: leftResult.node,
					right: rightResult.node,
					tokens: this.getTokenSequence(currentIndex)
				})
			});
		}

		if(this.peek().value === "nie") {
			if(this.peek(2).value === "je") {
				this.advance();
				this.advance();

				if(
					this.peek(1).value !== "pravda" ||
					this.peek(2).value !== "," ||
					this.peek(3).value !== "že"
				) return new FailureResult({
					error: new Error(`Expected "pravda, že", but got "${this.peek(1).value} ${this.peek(2).value} ${this.peek(3).value}"`),
					tokens: [this.peek(1), this.peek(2), this.peek(3)]
				});

				this.advance();
				this.advance();
				this.advance();
